--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cayenne Matt</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+
+<body>
+
+    <div id="intro" class="first_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-5 offset-lg-2">
+            <h1>Cayenne Matt</h1>
+            <p>
+              I'm a 5th year Ph.D. student at the <a href="https://lsa.umich.edu/astro"> University of Michigan Department of Astronomy </a>. This website is a work in progress, my main website is currently hosted <a href="https://sites.google.com/umich.edu/cayennematt/home">here.</a> 
+            </p>
+          </div>
+          <div class="col-lg-4">
+              <img width=100% src="NorthTrip.jpg" alt="prof_pic" class="img-fluid" style="border-radius: 20px">
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </body>
+</html>
